@@ -2,24 +2,30 @@ package org.example.streams;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.StringJoiner;
 
 public class ListExample {
     public static void main(String[] args) {
 
-        List<Employee> empList = List.of(new Employee(1),
-                new Employee(2),
-                new Employee(3));
+       String s =  new StringJoiner(":").add("1").add("2").add("3")
+                .add("4").add("5").toString();
 
-        empList.set(0, new Employee(50));// Not Supported
-        System.out.println(empList);
+        System.out.println(s);
 
-
-        List<Employee> empList1 = Arrays.asList(new Employee(1),
-                new Employee(2),
-                new Employee(3));
-
-        empList1.set(0, new Employee(50));// Supported
-        System.out.println(empList1);
+//        List<Employee> empList = List.of(new Employee(1),
+//                new Employee(2),
+//                new Employee(3));
+//
+//        empList.set(0, new Employee(50));// Not Supported
+//        System.out.println(empList);
+//
+//
+//        List<Employee> empList1 = Arrays.asList(new Employee(1),
+//                new Employee(2),
+//                new Employee(3));
+//
+//        empList1.set(0, new Employee(50));// Supported
+//        System.out.println(empList1);
 
     }
 }
